# mnp-demo

./: .gitignore  pixi.toml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 8dfcb15613a6_initial_migration_with_all_tables.py
backend/src/agent_platform/: config.py  main.py
backend/src/agent_platform/agent/v1/: agent_pb2.py  agent_run_pb2.py  block_pb2.py
backend/src/agent_platform/benchmark/v1/: benchmark_pb2.py
backend/src/agent_platform/common/v1/: types_pb2.py
backend/src/agent_platform/dataset/v1/: dataset_pb2.py  prompt_dataset_pb2.py
backend/src/agent_platform/db/: engine.py
backend/src/agent_platform/db/models/: __init__.py  agent.py  benchmark.py  dataset.py  policy.py  reward.py  tool.py  trajectory.py
backend/src/agent_platform/db/repository/: __init__.py  agent.py  base.py  benchmark.py  dataset.py  policy.py  tool.py  trajectory.py
backend/src/agent_platform/integrations/v1/: zoho_pb2.py
backend/src/agent_platform/llm/: client.py  executor.py
backend/src/agent_platform/models/: agent.py  agent_config.py  tool_config.py  tool_input.py
backend/src/agent_platform/policy/v1/: policy_pb2.py
backend/src/agent_platform/reward/v1/: reward_pb2.py
backend/src/agent_platform/service/v1/: __init__.py  agent_service_connect.py  agent_service_pb2.py  benchmark_service_connect.py  (+9 more)
backend/src/agent_platform/services/: agent.py  benchmark.py  dataset.py  policy.py  tool.py  trajectory.py
backend/src/agent_platform/tools/: base.py  registry.py
(+74 files in other folders)
