[project]
name = "platform-backend"
version = "0.1.0"
description = "Full lifecycle agent management platform backend"
requires-python = ">=3.11"
dependencies = [
    "connectrpc>=0.5.0",
    "protobuf>=5.0.0",
    "grpcio-tools>=1.60.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.34.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = ["attr-defined", "no-any-return", "name-defined"]
exclude = [
    ".*/gen/.*",
    ".*/service/v1/.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
